--- a/pages/System/example/input.twig
+++ b/pages/System/example/input.twig
@@ -1,3 +1,48 @@
+<box>
+    <box-body>
+        Main
+        <div id='main-div'></div>
+    </box-body>
+</box>
+
+
+<div id="child-div">
+
+    <div v-for="c in customers">
+        <input is="alt-input" required v-model="c.name">
+    </div>
+
+    <button @click="addClick">add</button>
+</div>
+
+<script>
+        var vm = new Vue({
+            el: "#child-div",
+            data: {
+                customers: []
+            },
+            mounted() {
+                setTimeout(() => {
+                    document.getElementById("main-div").append(this.$el);
+                });
+
+            }, methods: {
+                addClick() {
+
+                    this.customers.push({});
+                }
+            }
+        });
+</script>
+
+
+
+
+<hr />
+<hr />
+<hr />
+
+
 <div id="div1">
 
     <alt-e>
