--- a/pages/ACL/edit.twig
+++ b/pages/ACL/edit.twig
@@ -151,7 +151,7 @@
             actionChecked(a) {
                 let p = {};
                 if (this.module) {
-                    p.module = this.module.name;
+                    p.module = this.module.class;
                 }
 
                 if (this.usergroup) {
@@ -168,7 +168,7 @@
             getValue() {
                 let p = {};
                 if (this.module) {
-                    p.module = this.module.name;
+                    p.module = this.module.class;
                 }
 
                 if (this.usergroup) {
